# quantum-theory-hall

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: WORKFLOW_DEPENDENCIES.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
docs/: apa.csl  chapter01.1.md  chapter02.1.md  chapter02.2.md  chapter02.3.md  chapter03.1.md  chapter04.1.md  chapter04.dirac.md  index.md  refs.bib
docs/javascripts/: mathjax.js
quantum_mechanics_hall/chapter01/: __init__.py  planck_distribution.py
quantum_theory_hall/: __init__.py
quantum_theory_hall/chapter01/: __init__.py  planck_distribution.py
quantum_theory_hall/chapter02/: __init__.py  pendulum.py  pendulum_time.py  potential_energy.py
quantum_theory_hall/utils/: __init__.py  assets.py
scripts/: check-release.sh  generate_assets.py  run_affected_tests.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/quantum_mechanics_hall/: __init__.py
tests/unit/quantum_mechanics_hall/chapter01/: __init__.py  test_planck_distribution.py
tests/unit/quantum_theory_hall/: __init__.py
tests/unit/quantum_theory_hall/chapter01/: test_planck_distribution.py
tests/unit/quantum_theory_hall/chapter02/: __init__.py  test_pendulum.py  test_pendulum_time.py  test_potential_energy.py
tests/unit/quantum_theory_hall/utils/: test_assets.py
