[project]
name = "quantum-theory-hall"
version = "0.7.0"
description = "Solutions to the problem sets from Brian C. Hall's Quantum Theory for Mathematicians."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    {name = "Carlos Vera-Ciro", email = "caverac@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "quantum mechanics",
    "physics",
    "mathematics",
]
dependencies = [
    "dacite>=1.9.2",
    "matplotlib>=3.0.0",
    "scipy>=1.16.3",
]

[project.urls]
Homepage = "https://github.com/caverac/quantum-theory-hall"
Documentation = "https://github.com/caverac/quantum-theory-hall"
Repository = "https://github.com/caverac/quantum-theory-hall"
"Bug Reports" = "https://github.com/caverac/quantum-theory-hall/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "pylint>=4.0.0",
    "black>=25.9.0",
    "pydocstyle>=6.3.0",
    "commitizen>=3.0.0",
    "scipy-stubs>=1.11.0",
    "pre-commit>=4.3.0",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.25",
    "mkdocstrings-python>=1.10",
    "mkdocs-jupyter>=0.25",
    "jupyter>=1.0",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-macros-plugin>=1.0.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.pylint]
max-line-length = 120
disable = [
    "invalid-name",
    "too-few-public-methods",
    "unnecessary-ellipsis",
    "too-many-public-methods",
    "duplicate-code",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-statements",
]

[tool.pylint.IMPORTS]
# Allow imports that might not be available in all environments
ignored-modules = ["pytest"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = [
    "--cov=quantum_theory_hall",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.coverage.run]
source = ["quantum_theory_hall"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
